--- a/flutter_ui_kit/pubspec.yaml
+++ b/flutter_ui_kit/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts:
+  google_fonts: ^6.1.0
+  simple_icons: ^7.10.0
+  material_design_icons_flutter: ^7.0.7296
 
 dev_dependencies:
   flutter_test:
